Ultimas modificaciones con puerto configurado para subir a render

--- a/views/register.html
+++ b/views/register.html
@@ -115,7 +115,7 @@
 
                 <div class="form-control">
                     <label for="profilePic"><strong>Foto de perfil</strong></label>
-                    <input class="bgColorFFF" type="file" id="profilePic" accept=".jpg, .jpeg, .png" optional>
+                    <input class="button-color" type="file" id="profilePic" accept=".jpg, .jpeg, .png" optional>
                     <small>Error en la foto de perfil</small>
                 </div>
 
