--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -29,7 +29,7 @@
     color: #111;
 }
 
-.bgColorFFF {
+.button-color {
     background-color: #fff;
 }
 
@@ -46,28 +46,6 @@
 .form-control input:focus {
     outline: 0;
     border-color: #111;
-}
-
-.form-control.success input, select {
-    border-color: #118a43;
-    border: 2px solid #118a43;
-}
-
-.form-control.error input, select {
-    border-color: #db3422;
-    border: 2px solid #db3422;
-}
-
-.form-control small {
-    font-size: 12px;
-    font-weight: bold;
-    padding: 3px 0 3px 13px;
-    color: #db3422;
-    visibility: hidden;
-}
-
-.form-control.error small {
-    visibility: visible;
 }
 
 .form button {
