--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -127,7 +127,7 @@ main {
     background-color: #ffffff;
     padding: 6px;
     border-radius: 8px;
-    /* box-shadow: 0px 0px 8px #555;  */
+    box-shadow: 0px 0px 8px #555; 
     margin-bottom: 24px;
 }
 
@@ -313,7 +313,7 @@ section article img {
         background-color: #ffffff;
         padding: 6px;
         border-radius: 8px;
-        /* box-shadow: 0px 0px 8px #555; */
+        box-shadow: 0px 0px 8px #555;
         margin-bottom: 24px;
     }
 }
@@ -334,28 +334,14 @@ section article img {
         width: 33%;    
         text-align: right;
     }
-
-    /* 
-    .header__cajaSuperior__busqueda--input {
-        border: solid 1px #999;
-        border-radius: 6px;
-        color: #000000;
-        font-size: 16px;
-        height: 32px;
-        padding-left: 6px;
-        width: 100%
-    }
-     */
-
      
-   
     .header-navbar {
         display: flex;
         list-style: none;
         gap: 12px;
     }
     
-    /* Decoración links para las barras de nav del header */
+   
     .header-navbar > li > a, a:visited {
         text-decoration: none;
         color: #000;
@@ -390,7 +376,7 @@ section article img {
         background-color: #ffffff;
         padding: 6px;
         border-radius: 8px;
-        /* box-shadow: 0px 0px 8px #555; */
+        box-shadow: 0px 0px 8px #555;
         margin-bottom: 24px;
     }
 
